# finreport

./: .dockerignore  .env-example  .env.tpl  .gitignore  Cargo.toml  Dockerfile  Dockerfile.base  Dockerfile.finreport-be-base  Dockerfile.local  README.md  docker-compose.local.yml  docker-compose.yml  justfile
.gitea/workflows/: build-deploy.yaml
assets/: data.json  index.html  test-chart.json
docs/: comdirect_rest_api.postman_collection.json
finreport-fe/: package-lock.json  package.json  svelte.config.js
finreport-fe/src/lib/: graphqlClient.ts
finreport-fe/src/routes/: +page.svelte  +page.ts
finreport-rs/: .env-example  Cargo.toml  Makefile
finreport-rs/categorizer/: Cargo.toml
finreport-rs/categorizer/src/categorize/: mod.rs
finreport-rs/comdirect-rs/: Cargo.toml
finreport-rs/comdirect-rs/src/: lib.rs
finreport-rs/comdirect-rs/src/comdirect/: account_client.rs  accounts.rs  balance_model.rs  http.rs  loader.rs  mod.rs  session.rs  session_client.rs  transaction.rs
finreport-rs/entity/: Cargo.toml
finreport-rs/entity/src/entities/: account.rs  account_balance.rs  account_transactions.rs  categories.rs  mandate_categories.rs  mod.rs  prelude.rs  transaction_categories.rs  transactions.rs
finreport-rs/migration/: Cargo.toml
finreport-rs/migration/src/: lib.rs  m20220101_000001_account.rs  m20250609_193042_account_balances.rs  m20250609_221755_account_transactions.rs
finreport-rs/utils/: Cargo.toml
finreport-rs/utils/src/: lib.rs  settings.rs
finreport-rs/webapp/: Cargo.toml
finreport-rs/webapp/graphql/: graphql.config.yml  schema.graphql  test.graphql
finreport-rs/webapp/migrations/: 20250525195205_init.up.sql  20250528205550_mandate_categories.up.sql  20250528224420_unique_categories.up.sql
finreport-rs/webapp/src/: lib.rs  main.rs
finreport-rs/webapp/src/db/: mod.rs  seaql.rs
finreport-rs/webapp/src/graphql/: mod.rs  mutations.rs  queries.rs
finreport-rs/webapp/src/service/: mod.rs  mutation.rs
prompts/: categories.json  categorize.txt
src/: lib.rs  main.rs  settings.rs
src/comdirect/: account_client.rs  accounts.rs  balance.rs  balance_model.rs  loader.rs  mod.rs  session.rs  session_client.rs  session_model.rs  transaction.rs  utils.rs
src/db/: mod.rs
src/utils/: mod.rs
terraform/: main.tf  output.tf  provider.tf  variables.tf
