[package]
name = "comdirect-rs"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.19", features = ["json"] }
reqwest-middleware = { version = "0.4", features = ["json"] }
reqwest-retry = "0.7"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
serde_json = "1.0.140"
utils = { path = "../utils" }
tokio = "1.45.1"