[package]
name = "webapp"
version = "0.1.0"
edition = "2024"

[dependencies]
comdirect-rs = { path = "../comdirect-rs" }
categorizer = {path = "../categorizer"}
migration = { path = "../migration" }
entity = { path = "../entity" }

config = "0.15.11"
dotenv = "0.15.0"
env_logger = "0.11.8"
rand = "0.9.1"
reqwest = {version =  "0.12.15" , features = ["native-tls","stream", "json"]}
rig-core = "0.12.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = [ "runtime-tokio", "sqlite" ] }
tokio = { version = "1.44.2", features = ["full"]}
uuid = { version = "1.16.0", features = ["v4"] }
actix-web = "4.11.0"
actix-files = "0.6.6"
utils = {path = "../utils"}
async-graphql = "7.0.17"
async-graphql-actix-web = "7.0.17"
actix-cors = "0.7.1"
sea-orm = { version = "1.1.12", features = ["runtime-tokio", "sqlx-postgres", "macros", "mock", "debug-print", "with-json"] }
chrono = "0.4.41"


[[bin]]
name = "import-transactions"
path = "src/bin/import_transactions.rs"

